k8s/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meatvo-backend-service
  namespace: staging
  labels:
    app: meatvo-backend
    environment: staging
spec:
  selector:
    app: meatvo-backend
    environment: staging
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: meatvo-frontend-service
  namespace: staging
  labels:
    app: meatvo-frontend
    environment: staging
spec:
  selector:
    app: meatvo-frontend
    environment: staging
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
